tests/snapshots/yaml_suite_snapshots__yaml_suite_G7JE_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiline implicit keys
  from: "@perlpunk"
  tags: error mapping
  fail: true
  yaml: "a\\nb: 1\nc\n d: 1\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\\\\nb\n   =VAL :1\n"
