tests/snapshots/yaml_suite_snapshots__yaml_suite_G7JE_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Multiline implicit keys
  tags: error mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\\\\nb\n   =VAL :1\n"
  yaml: "a\\nb: 1\nc\n d: 1\n"
