tests/snapshots/yaml_suite_snapshots__yaml_suite_G992_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ">\n  folded text\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2796371"
  json: "\"folded text\\n\"\n"
  name: Spec Example 8.9. Folded Scalar
  tags: spec folded scalar 1.3-err
  tree: "+STR\n +DOC\n  =VAL >folded text\\n\n -DOC\n-STR\n"
  yaml: ">\n folded\n text\n↵\n↵\n"
