tests/snapshots/yaml_suite_snapshots__yaml_suite_G9HC_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid anchor in zero indented sequence
  from: "@perlpunk"
  tags: anchor error sequence
  fail: true
  yaml: "---\nseq:\n&anchor\n- a\n- b\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :seq\n"
