tests/snapshots/yaml_suite_snapshots__yaml_suite_G9HC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid anchor in zero indented sequence
  tags: anchor error sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :seq\n"
  yaml: "---\nseq:\n&anchor\n- a\n- b\n"
