tests/snapshots/yaml_suite_snapshots__yaml_suite_GDY7_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Comment that looks like a mapping key
  from: "@perlpunk"
  tags: comment error mapping
  fail: true
  yaml: "key: value\nthis is #not a: key\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value\n"
