tests/snapshots/yaml_suite_snapshots__yaml_suite_GDY7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Comment that looks like a mapping key
  tags: comment error mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value\n"
  yaml: "key: value\nthis is #not a: key\n"
